Fix performance problems with rendering routine
Rather than trying to build the routine up as the slides change instead
pre-populate all the routine and then pass that to the view

--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.0.1"
   },
   "dependencies": {
-    "flipclock": "~0.7.7"
+    "flipclock": "~0.7.7",
+    "jquery": "~2.1.4"
   }
 }
