--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "flipclock": "~0.7.7",
     "jquery": "~2.1.4",
-    "angular-timer": "~1.3.3"
+    "angular-timer": "~1.3.3",
+    "font-awesome": "~4.3.0"
   }
 }
