--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
-    "com.ionic.keyboard",
-    "cordova-plugin-media"
+    "com.ionic.keyboard"
   ],
   "cordovaPlatforms": [
     "android",
